[package]
name = "polkadot-client"
version = "0.9.31"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "kusama-runtime/runtime-metrics",
    "westend-runtime/runtime-metrics",
    "polkadot-runtime/runtime-metrics",
]
