[package]
name = "polkadot-primitives-test-helpers"
version = "0.9.31"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "tsv-unknown-block" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
