[package]
name = "polkadot-test-runtime"
version = "0.9.31"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
beefy-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
test-runtime-constants = { package = "test-runtime-constants", path = "./constants", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }
pallet-vesting = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "tsv-unknown-block" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
polkadot-runtime-parachains = { path = "../parachains", default-features = false }
xcm-builder = { path = "../../xcm/xcm-builder", default-features = false }
xcm-executor = { path = "../../xcm/xcm-executor", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
serde_json = "1.0.81"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }

[features]
default = ["std"]
no_std = []
only-staking = []
runtime-metrics = ["polkadot-runtime-parachains/runtime-metrics", "sp-io/with-tracing"]

std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"pallet-xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"test-runtime-constants/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"log/std",
	"frame-election-provider-support/std",
	"pallet-sudo/std",
]
