[package]
name = "polkadot-test-client"
version = "0.9.31"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
futures = "0.3.21"
